--- a/src/app/styles/general/_colours.scss
+++ b/src/app/styles/general/_colours.scss
@@ -6,6 +6,7 @@ $clr-light: #B7C3D0;
 $clr-medium-light: #70879C;
 
 // Colours
+$clr-anchor: #0087FF;
 $clr-primary: #0087FF;
 $clr-lightcream: #F5F9FF;
 $clr-cream: #EBEFF3;
