--- a/src/app/event/cards/_event.card.html
+++ b/src/app/event/cards/_event.card.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="event-card__thumb"> <!-- style="background-image:url(/assets/images/placeholder/event-3.jpg);" -->
-      <a ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">
+      <a ng-href="#/e/{{::event.id}}/{{::(event.title | slugify)}}">
         <img ng-src="{{::event.profile_image_urls[0].thumbnail}}" src="/assets/images/blank.png" alt="Event thumbnail" />
       </a>
     </div>
@@ -17,7 +17,7 @@
         <h3 class="event-card__title">
           <a ng-bind="::event.title"
              class="link-hover"
-             ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})"></a>
+             ng-href="#/e/{{::event.id}}/{{::(event.title | slugify)}}"></a>
         </h3>
         <p ng-bind="::event.description"
            class="event-card__desc"></p>
