--- a/src/app/event/components/_event.body.html
+++ b/src/app/event/components/_event.body.html
@@ -4,13 +4,13 @@
       <section class="event-details">
         <div class="event-details__author">
           <div class="thumb" user-data="eventVM.data.event.author" show-user-hover="">
-            <a ui-sref="user({id: 'boop', slug: 'woop'})">
+            <a ng-href="#/u/{{::eventVM.data.event.author.id}}/{{::(eventVM.data.event.author.username | slugify)}}">
               <img ng-src="{{::eventVM.data.event.author.userprofile.avatar_image_urls.thumbnail}}" src="/assets/images/blank.png" alt="Event thumbnail" />
             </a>
           </div>
           <div class="info">
             <h5 class="subtitle">Event Author</h5>
-            <a ui-sref="user({id: 'boop', slug: 'woop'})"
+            <a ng-href="#/u/{{::eventVM.data.event.author.id}}/{{::(eventVM.data.event.author.username | slugify)}}"
                class="title"
                user-data="eventVM.data.event.author"
                show-user-hover=""
