--- a/src/app/general/_user.hover.popup.html
+++ b/src/app/general/_user.hover.popup.html
@@ -4,11 +4,13 @@
      }"
      class="user-hover-popup" ng-show="visible">
   <div class="user-thumb user-thumb--big">
-    <a ui-sref="user({id: 'boop', slug: 'woop'})">
+    <a ng-href="#/u/{{user.id}}/{{(user.username | slugify)}}">
       <img ng-src="{{user.userprofile.avatar_image_urls.thumbnail}}" src="/assets/images/blank.png" alt="Event thumbnail" />
     </a>
   </div>
-  <a class="user-name" ui-sref="user({id: 'boop', slug: 'woop'})" ng-bind="user.username"></a>
+  <a class="user-name"
+     ng-href="#/u/{{user.id}}/{{(user.username | slugify)}}"
+     ng-bind="user.username"></a>
   <div class="options">
     <button class="btn btn--prominent btn--smaller">
       FOLLOW
