--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,6 +6,7 @@
 @import "styles/general/mixins";
 @import "styles/general/reset";
 @import "styles/general/animate";
+@import "styles/general/states";
 
 @import "styles/general/variables";
 @import "styles/general/colours";
