--- a/src/app/styles/event/_event.scss
+++ b/src/app/styles/event/_event.scss
@@ -4,11 +4,16 @@
   @extend .clearfix;
 
   margin: 40px 0 80px 0;
+
+  &.state--opaque {
+    opacity: 0;
+  }
+
 }
 
 .event-aside {
   width: $column-width;
-  margin-left: 20px;
+  margin-left: 40px;
 
   float: right;
 }
@@ -19,7 +24,7 @@
 
     .event-left {
       width: $column-width;
-      margin-right: 20px;
+      margin-right: 40px;
 
       float: left;
 
