--- a/src/app/general/_footer.html
+++ b/src/app/general/_footer.html
@@ -9,7 +9,7 @@
       <span>-</span>
       <a href="">about</a>
       <span>-</span>
-      <a href="">contact</a>
+      <a href="mailto:simonghales@gmail.com">contact</a>
       <span>-</span>
       <a href="">terms & conditions</a>
     </div>
