--- a/src/app/general/_preview.slider.html
+++ b/src/app/general/_preview.slider.html
@@ -9,7 +9,7 @@
             <a class="when" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">03:53:25</a>
           </div>
           <div class="title-wrapper">
-            <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Some Event</a>
+            <a class="title" ui-sref="event({id: 'rALmc', slug: 'exomars-launch-esa-mars-orbiter-and-lander'})">Chinese New Year</a>
           </div>
           <button class="btn btn--main">
             Follow
